# AppInstaller

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui
Archives/: zippackage.cpp  zippackage.h
Assets/: assetmanagerbase.cpp  assetmanagerbase.h  download.cpp  download.h  progressdialog.cpp  progressdialog.h
Assets/github/: githubassetmanager.cpp  githubassetmanager.h
Files/: download.cpp  download.h  filedownload.cpp  filedownload.h  networkaccessdownload.cpp  networkaccessdownload.h
ListItems/: releaseitem.cpp  releaseitem.h
Zip/: zippackage.cpp  zippackage.h
src/: CMakeLists.txt  Configuration.h  Setup.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Archives/: zippackage.cpp  zippackage.h
src/Assets/: assetmanagerbase.cpp  assetmanagerbase.h  download.cpp  download.h  package.cpp  progressdialog.h
src/Assets/Models/: tag.cpp  tag.h
src/Assets/github/: GitHubProject.cpp  GitHubProject.h  githubassetmanager.cpp  githubassetmanager.h
src/ConfigurationRepository/: ConfigurationBase.cpp  ConfigurationBase.h  DependencyConfigurationBase.cpp  DependencyConfigurationBase.h  ProjectConfigurationBase.cpp  ProjectConfigurationBase.h
src/UserInterface/: mainwindow.cpp  mainwindow.h  mainwindow.ui  notificationdialog.cpp  notificationdialog.h  notificationdialog.ui  package.cpp  package.h
tests/: CMakeLists.txt
